# kurultai-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  subagent-driven-development.zip.bak
agent-collaboration/: SKILL.md
ceo-advisor/: SKILL.md
claude-cleanup/: SKILL.md
cli/: pyproject.toml
cli/examples/: CLAUDE.md  README.md  code-review.yaml  feature-development.yaml  research-analysis.yaml  skill.yaml
cli/registry/: skills.json
cli/skills/code-reviewer/: README.md  skill.yaml
cli/skills/code-reviewer/prompts/: main.md
cli/skills/doc-generator/: README.md  skill.yaml
cli/skills/doc-generator/prompts/: main.md
cli/skills/horde-brainstorming/: README.md  skill.yaml
cli/skills/horde-brainstorming/prompts/: main.md
cli/skills/horde-swarm/: README.md  skill.yaml
cli/skills/horde-swarm/prompts/: main.md
cli/skills/test-generator/: README.md  skill.yaml
cli/skills/test-generator/prompts/: main.md
cli/src/kurultai/: __init__.py  cli.py  config.py  dependencies.py  exceptions.py  publishing.py  registry.py  validators.py  workflow.py
cli/src/kurultai/commands/: __init__.py  info.py  install.py  list.py  publish.py  remove.py  workflow.py
cli/src/kurultai/models/: __init__.py  skill.py
cli/tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_dependencies.py  test_manifest.py  test_skill_manifest.py
critical-reviewer/: SKILL.md
docs/: creating-skills.md  getting-started.md  horde-ecosystem.md
golden-horde/: SKILL.md  golden-horde-design.md
horde-brainstorming/: SKILL.md
horde-debug/: SKILL.md
horde-gate-testing/: SKILL.md  skill.yaml
horde-implement/: SKILL.md  fix-subagent-prompt.md  implementer-prompt.md  spec-reviewer-prompt.md  verification-prompt.md
horde-plan/: SKILL.md
horde-prompt/: CLAUDE.md  SKILL.md  prompts.py
horde-review/: SKILL.md  (+1 more)
(+163 files in other folders)
